yaml/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-flight-booking
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb   
  labels:
    app: temporal-flight-booking
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    name: workflow
  selector:
    app: temporal-flight-booking
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: temporal-flight-booking
  name: metrics
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: temporal-flight-booking
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: temporal-flight-booking
  name: ui
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: temporal-flight-booking
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: temporal-flight-booking
  name: ingressroute-temporal-flight-booking
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`demo.tmprl-sa.cloud`) && (PathPrefix(`/temporal-flight-booking`))
    priority: 13
    services:
    - name: ui
      passHostHeader: false
      port: 80
      responseForwarding:
        flushInterval: 100ms
      weight: 1
  entryPoints:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-flight-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-flight-booking
  template:
    metadata:
      labels:
        app: temporal-flight-booking
    spec:
      containers:
      - name: worker
        image: ktenzer/temporal-flight-booking-worker:v1.1
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/certs
          name: certs
      - name: workflow
        image: ktenzer/temporal-flight-booking-workflow:v1.1
        imagePullPolicy: Always
        ports:
        - name: workflow
          containerPort: 5000
        volumeMounts:
        - mountPath: /etc/certs
          name: certs
      volumes:
      - name: certs
        secret:
          defaultMode: 420
          secretName: temporal-flight-booking-tls
